style.css
 body {
      margin: 0 32px;
      font-family: 'Roboto', sans-serif;
      font-weight: 400;
      background-color: #ffffff;
    }
	.container {
		margin: 0 auto;
		max-width: 1000px;
		width: 100%;
		padding: 1rem 2rem;
	}
	.smol {
        font-size:75%
      }
	* {
    box-sizing: border-box;
	}

/* Link colours are cool! 😎 Let's go grey for light theme */
a:link, a:visited {
  text-decoration: none;
  color: #696969;
}

/* Active links ✨ pink! */
a:hover, a:active {
  text-decoration: underline;
  color: #ff69bd;
}

/* Dark theme best theme 💛 */
@media (prefers-color-scheme: dark) {
  body {
    background-color: #2c2c2c;
    color: #ffffff;
  }

 	/* Dark theme gets some orange link flavour 🧡 */
a:link, a:visited {
  text-decoration: none;
  color: #f5a142;
}

